// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate generates styles 1`] = `
.c0 {
  color: #001833;
}

.c1 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  className="c0 c1"
>
  generates styles
</div>
`;

exports[`Truncate renders 1`] = `
.c0 {
  color: #001833;
}

.c1 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  className="c0 c1"
>
  renders
</div>
`;
